<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Food School</string>
    <string name="hello_world">Hello world!</string>
    <string name="backup_complete">Backup Complete</string>
    <string name="backup_failed">Backup Failed</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_categories">CategoriesActivity</string>
    <string name="title_activity_food">FoodActivity</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="title_activity_play_categories">PlayCategoriesActivity</string>
    <string name="title_activity_learn_categories">LearnCategoriesActivity</string>
    <string name="title_activity_learn_food">LearnFoodActivity</string>
    <string name="title_activity_learn_detail">LearnDetailActivity</string>
    <string name="title_activity_play_quiz">PlayQuizActivity</string>
    <string name="title_activity_play_tap">PlayTapActivity</string>
    <string name="title_activity_play_end">PlayEndActivity</string>
    <string name="btnLearn">Learn!</string>
    <string name="btnPlay">Play!</string>
    <string name="btnFruit">Fruits</string>
    <string name="btnVegetables">Vegetables</string>
    <string name="btnMeat">Meat</string>
    <string name="btnCereals">Cereals</string>
    <string name="btnDairy">Dairy</string>
    <string name="btnApple">Apple</string>

</resources>